kustomizations/networking/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-catuai
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: homeassistant.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: home-assistant
            port:
              number: 8123
